ci: Add JDK 26 testing support (#4498)